fixed footer flickering

--- a/public/css/footer.less
+++ b/public/css/footer.less
@@ -1,4 +1,6 @@
 .footer-stats {
+	display: none;
+
 	.stats-card {
 		text-align: center;
 
